Use static values for modal image height and width to prevent image stretching

--- a/ficxin-evaluation/src/App.scss
+++ b/ficxin-evaluation/src/App.scss
@@ -131,8 +131,8 @@
     position: relative;
     
     img {
-      height: 60vh;
-      width: 60vw;
+      height: 500px;
+      width: 500px;
       background-size: contain;
     }
   
